--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = "mongodb+srv://chiraniakunal:sWNHVSRGkg7RftHV@cluster0.h9lho.mongodb.net/CryptoDatabase"
-PORT= 4000
+DATABASE_URL = ""
+PORT= 
